# microservices

./: .gitignore
csharp/WebApi/: WebApi.sln
golang/awesomeProject/: Draft.txt
golang/rest-api/: config.yml  go.mod  go.sum
golang/restApi/: appsettings.json  go.mod  go.sum
java/chapter01/microservices/: pom.xml
java/chapter02/microservices/: pom.xml
java/chapter03/microservices/: build.gradle
java/chapter04/: Docker_Commands.txt  Docker_Compose.txt
java/chapter04/microservices-gradle/: Dockerfile  build.gradle  docker-compose.yml
java/chapter04/microservices-maven/: pom.xml
java/chapter05/: Draft.txt  pom.xml
java/chapter05/configserver/: Dockerfile  pom.xml
java/chapter05/licensing-service/: Dockerfile  pom.xml
java/chapter06/: pom.xml
java/chapter06/configserver/: Dockerfile  pom.xml
java/chapter06/eurekaserver/: Dockerfile  pom.xml
java/chapter06/licensing-service/: Dockerfile  pom.xml
java/chapter06/organization-service/: Dockerfile  pom.xml
java/kind-kubernetes/config/: build_and_push.sh  ingress.yml
java/kind-kubernetes/jokes/: build.gradle
java/kind-kubernetes/spring-admin/: build.gradle
java/spring-eureka-gateway/: Dockerfile  Draft.txt  build.gradle  settings.gradle
java/webapi/: pom.xml
python/pipenv-project/: Pipfile  requirements.txt
python/pipenv-project/src/: app.py
python/poetry-project/: .flaskenv  pyproject.toml
python/poetry-project/instance/: bookmarks.db
python/poetry-project/src/: __init__.py  auth.py  bookmarks.py  db.py
python/virtualenv-project/: .gitignore  app.py  requirements.txt
(+133 files in other folders)
