[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Dmytro Honchar <dmytro.honchar972@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-restful = "^0.3.9"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.0"
flasgger = "^0.9.5"
pytest-flask = "^1.2.0"
flask-login = "^0.6.2"
flask-security-too = "^5.0.2"
flask-admin = "^1.6.0"
python-dotenv = "^0.21.0"
validators = "^0.20.0"
flask-jwt-extended = "^4.4.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
